# codice_fiscale_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  development.yml  publish.yml  rust.yml
benches/: generate_benchmark.rs  verify_benchmark.rs
src/: common.rs  control_code.rs  errors.rs  generator.rs  lib.rs  omocodes.rs  person_data.rs  verifier.rs
