[package]
name = "codice_fiscale_rs"
version = "0.1.0"
edition = "2021"
authors = ["Giovanni Zenari <zenari12@gmail.com>"]
description = "Crate to compute and validate Italian Tax code (codice fiscale)"
repository = "https://github.com/succoDiPompelmo/codice_fiscale_rs"
license-file = "LICENSE"
keywords = ["codice", "fiscale"]
categories = ["algorithms"]

exclude = [
    "README.md",
    "LICENSE",
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
rand = "0.8.5"
thiserror = "1.0.38"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "verify_benchmark"
harness = false
